@@ -1,5 +1,5 @@
 /* Float.java -- object wrapper for float
-   Copyright (C) 1998, 1999, 2000, 2001, 2002 Free Software Foundation, Inc.
+   Copyright (C) 1998, 1999, 2000, 2001, 2002, 2003 Free Software Foundation, Inc.
 
 This file is part of GNU Classpath.
 
@@ -37,8 +37,6 @@ exception statement from your version. */
 
 
 package java.lang;
-
-import gnu.classpath.Configuration;
 
 /**
  * Instances of class <code>Float</code> represent primitive
@@ -100,17 +98,6 @@ public final class Float extends Number implements Comparable
    * @serial the wrapped float
    */
   private final float value;
-
-  /**
-   * Load native routines necessary for this class.
-   */
-  static
-  {
-    if (Configuration.INIT_LOAD_LIBRARY)
-      {
-        System.loadLibrary("javalang");
-      }
-  }
 
   /**
    * Create a <code>Float</code> from the primitive <code>float</code>
